Altualizações do sprint 3
